--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
                         <img class="w-25 p-1 img-fluid" src="assets/img/LOGOB.png" alt="..." />
-                        <h1 class="mx-auto my-0 text-uppercase">Au mille délices</h1>
+                        <h1 class="mx-auto my-0 text-uppercase">Aux mille délices</h1>
                         <a class="btn btn-primary" href="#projects">Notre Menu</a>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Misty</h4>
+                                    <h4 class="text-white">Entrée 1</h4>
                                     <p class="mb-0 text-white-50">Lorem ipsum dolor sit amet,
                                         consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -93,7 +93,7 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Mountains</h4>
+                                    <h4 class="text-white">Entrée 2</h4>
                                                                         <p class="mb-0 text-white-50">Lorem ipsum dolor sit amet,
                                         consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -109,7 +109,7 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Misty</h4>
+                                    <h4 class="text-white">Entrée 3</h4>
                                                                         <p class="mb-0 text-white-50">Lorem ipsum dolor sit amet,
                                         consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -130,7 +130,7 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Misty</h4>
+                                    <h4 class="text-white">Plat Principal 1</h4>
                                                                         <p class="mb-0 text-white-50">Lorem ipsum dolor sit amet,
                                         consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
