--- a/index.html
+++ b/index.html
@@ -241,6 +241,9 @@
                                 <i class="fas fa-solid fa-user mb-2"></i>
                                 <h4 class="text-uppercase m-0">Cuisinier</h4>
                                 <hr class="my-4 mx-auto" />
+                                <div class="small text-black-50">Description</div>
+                                <div class="small text-black-50">Lorem Ipsum</div>
+                                <div class="small text-black-50">compétence requises</div>
                                 <div class="small text-black-50">Lorem Ipsum</div>
                             </div>
                         </div>
@@ -251,6 +254,9 @@
                                 <i class="fas fa-solid fa-user mb-2"></i>
                                 <h4 class="text-uppercase m-0">Laveur</h4>
                                 <hr class="my-4 mx-auto" />
+                                <div class="small text-black-50">Description</div>
+                                <div class="small text-black-50">Lorem Ipsum</div>
+                                <div class="small text-black-50">compétence requises</div>
                                 <div class="small text-black-50">Lorem Ipsum</div>
                             </div>
                         </div>
@@ -261,6 +267,9 @@
                                 <i class="fas fa-solid fa-user mb-2"></i>
                                 <h4 class="text-uppercase m-0">Serveur</h4>
                                 <hr class="my-4 mx-auto" />
+                                <div class="small text-black-50">Description</div>
+                                <div class="small text-black-50">Lorem Ipsum</div>
+                                <div class="small text-black-50">compétence requises</div>
                                 <div class="small text-black-50">Lorem Ipsum</div>
                             </div>
                         </div>
