--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </section>
         <!-- Signup-->
         <!-- Contact-->
-        <section class="contact-section bg-black">
+        <section class="contact-section bg-black" id="signup">
             <h2 class="text-white mb-5">Postes disponibles</h2>
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5">
@@ -241,9 +241,10 @@
                                 <i class="fas fa-solid fa-user mb-2"></i>
                                 <h4 class="text-uppercase m-0">Cuisinier</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">Description</div>
+                                <h4 class="small text-black-50">Description</h4>
                                 <div class="small text-black-50">Lorem Ipsum</div>
-                                <div class="small text-black-50">compétence requises</div>
+                                <div class="small text-black-50"> ---</div>
+                                <h4 class="small text-black-50">compétence requises</h4>
                                 <div class="small text-black-50">Lorem Ipsum</div>
                             </div>
                         </div>
@@ -254,9 +255,10 @@
                                 <i class="fas fa-solid fa-user mb-2"></i>
                                 <h4 class="text-uppercase m-0">Laveur</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">Description</div>
+                                <h4 class="small text-black-50">Description</h4>
                                 <div class="small text-black-50">Lorem Ipsum</div>
-                                <div class="small text-black-50">compétence requises</div>
+                                <div class="small text-black-50"> ---</div>
+                                <h4 class="small text-black-50">compétence requises</h4>
                                 <div class="small text-black-50">Lorem Ipsum</div>
                             </div>
                         </div>
@@ -267,9 +269,10 @@
                                 <i class="fas fa-solid fa-user mb-2"></i>
                                 <h4 class="text-uppercase m-0">Serveur</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">Description</div>
+                                <h4 class="small text-black-50">Description</h4>
                                 <div class="small text-black-50">Lorem Ipsum</div>
-                                <div class="small text-black-50">compétence requises</div>
+                                <div class="small text-black-50"> ---</div>
+                                <h4 class="small text-black-50">compétence requises</h4>
                                 <div class="small text-black-50">Lorem Ipsum</div>
                             </div>
                         </div>
@@ -282,7 +285,7 @@
         </section>
 
 
-        <section class="signup-section" id="signup">
+        <section class="signup-section" >
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
