--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
         <!-- Projects-->
         <section class="projects-section bg-light " id="projects">
             <div class="row gx-0 mb-4 mb-lg-5 align-items-center justify-content-center">
-                <a class="col-md-1 menu-nav"  value="appetizers" onclick="toggleMenu(this)">Entrées</a>
+                <button class="col-md-1 menu-nav"  value="appetizers" onclick="toggleMenu(this)" >Entrées</button>
                 <div class="col-sm-1 menu-dot">-</div>
-                <a class="col-md-1 menu-nav"  value="main" onclick="toggleMenu(this)">Plats principal</a>
+                <button class="col-md-1 menu-nav"  value="main" onclick="toggleMenu(this)">Plats principal</button>
                 <div class="col-sm-1 menu-dot">-</div>
-                <a class="col-md-1 menu-nav"  value="desserts"  onclick="toggleMenu(this)">Desserts</a>
+                <button class="col-md-1 menu-nav"  value="desserts"  onclick="toggleMenu(this)">Desserts</button>
             </div>
-            <div class="container px-4 px-lg-5 menu" id="appetizers" >
+            <div class="container px-4 px-lg-5 menu" id="main" >
                 <!-- Featured Project Row-->
       
                 <!-- Project One Row-->
@@ -120,7 +120,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container px-4 px-lg-5 menu" id="main" style="display : none;">
+            <div class="container px-4 px-lg-5 menu" id="appetizers" style="display : none;">
                 <!-- Featured Project Row-->
       
                 <!-- Project One Row-->
